added redirect stuff

--- a/05._HTML_Server/public/frontpage/frontpage.css
+++ b/05._HTML_Server/public/frontpage/frontpage.css
@@ -1,3 +1,8 @@
-body {
-    background-color: brown;
-}
+
+        #frontpage-header {
+            color: red;
+        }
+        .headers {
+            background-color: grey;
+        }
+
